--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/eonzy298/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/eonzy298/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/lcdrn/b513m" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/lcdrn/l11d" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/lcdrn/s12t" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/lcdrn/u8g" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/lcdrn/w4g" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/lcdrn/u12e" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/lcdrn/x3m" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/lcdrn/u10l" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/lcdrn/d9f" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/lcdrn/b7v" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/lcdrn/k5f" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/eonzy298/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/eonzy298/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/xilah/b513q" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/xilah/n11p" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/xilah/i12o" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/xilah/h8m" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/xilah/k4f" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/xilah/k12x" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/xilah/z3h" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/xilah/f10j" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/xilah/a9l" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/xilah/z7r" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/xilah/c5m" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/26/n12212934.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/06/Capture-13-320x200.jpg"><p align="center">【最新疫情6·28】全球病例超过1000万</p></a>
 <a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/26/n12212934.md#1" title="【最新疫情6·28】全球病例超过1000万""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/Capture-13-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/27/n12216420.md#1" title="【一线采访】四川大暴雨亲历者谈惊魂一幕""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/Unknown-10-320x200.jpg">&nbsp;</a>
@@ -13,21 +13,22 @@
 <a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/27/n12216076.md#1" title="加拿大前司法部长：中共是政治病毒""><img width="73" src="https://i.epochtimes.com/assets/uploads/2012/12/1212100115352052-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/26/n12214964.md#1" title="全球退党中心倡议：解体中共 远离瘟疫""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/Screen-Shot-2020-06-26-at-3.35.45-PM-320x200.png">&nbsp;</a>
 <p align="center"><a href="https://github.com/eonzy298/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://eonzy298.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>27分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/28/n12217156.md#1">【珍言真语】潘东凯：国安法与美暴动同一推手</a><br>
-:clock8: <em>39分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/28/n12216968.md#1">【翻墙必看】申纪兰离世引发热议</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/26/n12212934.md#1">【最新疫情6·28】全球病例超过1000万</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/28/n12216881.md#1">2020年美国最常见的五大诈骗行为</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/28/n12217083.md#1">成都男孩遭陌生人绑走毒打 被发现时浑身是血</a><br>
+:clock8: <em>57分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/28/n12217156.md#1">【珍言真语】潘东凯：国安法与美暴动同一推手</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/28/n12216968.md#1">【翻墙必看】申纪兰离世引发热议</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/26/n12212934.md#1">【最新疫情6·28】全球病例超过1000万</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/28/n12216881.md#1">2020年美国最常见的五大诈骗行为</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/28/n12217083.md#1">成都男孩遭陌生人绑走毒打 被发现时浑身是血</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/28/n12217057.md#1">中缅边境的河流突然变成红色 民众惊慌</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/26/n12214374.md#1">30万燕郊人像蝼蚁爬向北京 文章被删</a><br>
-<a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/26/n12215064.md#1">大陆洪灾 台商被令限期捐钱 不堪重负回台</a><br>
 <a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/27/n12216263.md#1">宜昌水深半人高 网民疑三峡大坝葛洲坝泄洪</a><br>
+<a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/26/n12215064.md#1">大陆洪灾 台商被令限期捐钱 不堪重负回台</a><br>
 <a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/26/n12214937.md#1">杨洁篪跟蓬佩奥说了什么 导致双方不欢而散</a><br>
 <a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/27/n12215250.md#1">【翻墙必看】中共政治局常委与美方交手失败</a><br>
 <a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/26/n12214073.md#1">【现场视频】“老天怒了” 内蒙现巨型龙卷风</a><br>
 <a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/26/n12213970.md#1">中共加大对台军事威胁 台湾强化反制能力</a><br>
 <a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/26/n12214879.md#1">普拉多3.5L大陆停产 丰田高端车型全离华</a><br>
+<a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/26/n12212915.md#1">【十字路口】中共外宣5手法 特务血泪醒世录</a><br>
 <br><p align="center"><a href="https://github.com/eonzy298/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/26/n12215121.md#1">【新闻看点】美国连9动作 领军国际抗共潮</a><br>
 <a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/26/n12212986.md#1">【内幕】莱特希泽与王岐山言论针锋相对</a><br>
@@ -40,7 +41,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 358,811,200 人
+!共 358,815,052 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
