--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/dgvtzych/g513t" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/dgvtzych/l11j" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/dgvtzych/y12h" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/dgvtzych/b8z" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/dgvtzych/t4p" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/dgvtzych/a12u" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/dgvtzych/m3p" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/dgvtzych/o10d" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/dgvtzych/t9f" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/dgvtzych/l7f" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/dgvtzych/e5k" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/eldxsuinr/r513x" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/eldxsuinr/u11y" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/eldxsuinr/w12j" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/eldxsuinr/o8g" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/eldxsuinr/k4c" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/eldxsuinr/e12r" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/eldxsuinr/q3p" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/eldxsuinr/n10y" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/eldxsuinr/b9p" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/eldxsuinr/w7c" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/eldxsuinr/t5u" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/8/n12242632.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/07/20200708_085704-320x200.jpg"><p align="center">驻港国安公署揭牌之际 港确诊个案激增</p></a>
 <a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/8/n12242632.md#1" title="驻港国安公署揭牌之际 港确诊个案激增""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/20200708_085704-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/8/n12242209.md#1" title="【一线采访】降雨量破历史极值 江西灾情严重""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/IMG_4468-320x200.jpg">&nbsp;</a>
@@ -13,10 +13,10 @@
 <a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/8/n12241006.md#1" title="岳阳降雨突破68年以来极值 五省或发山洪""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/3-8-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/8/n12240166.md#1" title="【瘟疫与中共】巴西总统也确诊 应作何反思""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/GettyImages-1218644452-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://vkwknd3513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>5分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/8/n12241562.md#1">廖远：大禹治水与三峡工程防洪失败</a><br>
-:clock8: <em>15分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/8/n12242378.md#1">【役情最前线】南海各自军演 美中航母战阵对峙</a><br>
-:clock8: <em>41分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/8/n12242632.md#1">驻港国安公署揭牌之际 港确诊个案激增</a><br>
-:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/8/n12242506.md#1">谢燕益谈中共惧怕709律师的真实原因</a><br>
+:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/8/n12241562.md#1">廖远：大禹治水与三峡工程防洪失败</a><br>
+:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/8/n12242378.md#1">【役情最前线】南海各自军演 美中航母战阵对峙</a><br>
+:clock8: <em>59分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/8/n12242632.md#1">驻港国安公署揭牌之际 港确诊个案激增</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/8/n12242506.md#1">谢燕益谈中共惧怕709律师的真实原因</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/8/n12242099.md#1">惩罚中共瞒疫 川普：禁TikTok是选择之一</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/7/n12239553.md#1">贵州大巴21死 传司机是退伍军人、拆迁户</a><br>
@@ -40,7 +40,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 359,519,112 人
+!共 359,519,168 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
