--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,5 +1,6 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/nivpxqm/y513d" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/nivpxqm/s11e" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/nivpxqm/n12m" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/nivpxqm/p8h" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/nivpxqm/t4g" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/nivpxqm/p12b" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/nivpxqm/i3k" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/nivpxqm/v10t" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/nivpxqm/y9r" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/nivpxqm/b7n" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/nivpxqm/c5d" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12242765.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/07/DSC_6510-1-320x200.jpg"><p align="center">被捕香港大纪元员工：遭警威胁送中活摘</p></a>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/gqbrsfxz/i513o" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/gqbrsfxz/i11n" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/gqbrsfxz/j12n" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/gqbrsfxz/y8n" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/gqbrsfxz/b4f" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/gqbrsfxz/v12z" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/gqbrsfxz/e3t" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/gqbrsfxz/i10x" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/gqbrsfxz/c9k" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/gqbrsfxz/f7o" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/gqbrsfxz/v5h" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12242776.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/06/AAA-2-320x200.jpg"><p align="center">【最新疫情7.9】香港出现第三波感染</p></a>
+<a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12242776.md#1" title="【最新疫情7.9】香港出现第三波感染""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/AAA-2-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12242765.md#1" title="被捕香港大纪元员工：遭警威胁送中活摘""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/DSC_6510-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/4/13/n12028379.md#1" title="【思想领袖】布拉特：中共改秩序 扬言打台湾""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/download-94-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242506.md#1" title="谢燕益谈中共惧怕709律师的真实原因""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/XIEYANYI-600x400-320x200.jpg">&nbsp;</a>
@@ -11,14 +12,13 @@
 <a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12241760.md#1" title="中芯国际股价暴涨暴跌 中共撒钱难掩窘境""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/06/GettyImages-55920462-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12241863.md#1" title="【一线采访】贵州铜仁山体滑坡 村庄被埋""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/IMG_1400-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/4/n12232591.md#1" title="【独家】内部文件曝中共脸书账号的秘密""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/Screen-Shot-2020-07-04-at-8.52.27-PM-320x200.png">&nbsp;</a>
-<a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/7/n12239794.md#1" title="【重播】蓬佩奥：北京须公布病毒真相""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/download-36-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://qtwlwd303.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>6分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12242955.md#1">纪念709大抓捕五周年 各界关注港版国安法</a><br>
-:clock8: <em>15分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12242764.md#1">美2/3失业者疫情下所获救济金超过工资</a><br>
-:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12243086.md#1">蓬佩奥：严防中共窃个资 美不只禁用TikTok</a><br>
-:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12242999.md#1">【新西兰疫情7.9】隔离点新增3例 施工区域加强管理</a><br>
-:clock8: <em>54分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12243018.md#1">留学中介：高校正在研究“变更方案”</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12243026.md#1">纽约市计划9月复课 到校与网课结合</a><br>
+:clock8: <em>3分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12243292.md#1">NASA：龙飞船停泊测试展现“超能力”</a><br>
+:clock8: <em>6分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12242776.md#1">【最新疫情7.9】香港出现第三波感染</a><br>
+:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12242955.md#1">纪念709大抓捕五周年 各界关注港版国安法</a><br>
+:clock8: <em>39分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12242764.md#1">美2/3失业者疫情下所获救济金超过工资</a><br>
+:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12243086.md#1">蓬佩奥：严防中共窃个资 美不只禁用TikTok</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/9/n12242999.md#1">【新西兰疫情7.9】隔离点新增三例 施工区域加强管理</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/7/n12239553.md#1">贵州大巴21死 传司机是退伍军人、拆迁户</a><br>
 <a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/7/n12239966.md#1">任正非“血腥”管理模式引起FBI局长注意</a><br>
@@ -61,6 +61,7 @@
 <a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12242228.md#1">邓紫棋拿麦克风飙高音 罩中的玻璃杯瞬间炸裂</a><br>
 <a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12241972.md#1">乐视退市 中国半个娱乐圈明星血本无归</a><br>
 <a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12241993.md#1">涉诱奸多名学生 广东一小学老师被家长群殴</a><br>
+<a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/7/n12239794.md#1">【重播】蓬佩奥：北京须公布病毒真相</a><br>
 <a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12240298.md#1">【十字路口】贵州巴士怪异车祸 抖音退港有猫腻</a><br>
 <a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12241334.md#1">白宫警告勿投资中企 免被下一轮制裁连累</a><br>
 <a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12241087.md#1">黑龙江法轮功学员王淑坤遭毒打 含冤离世</a><br>
