--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/oqudue369/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/xmjmusmdt/p513i" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/xmjmusmdt/r11x" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/xmjmusmdt/r12s" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/xmjmusmdt/u8q" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/xmjmusmdt/i4y" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/xmjmusmdt/p12e" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/xmjmusmdt/a3m" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/xmjmusmdt/w10v" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/xmjmusmdt/p9w" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/xmjmusmdt/g7d" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/xmjmusmdt/p5z" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/oqudue369/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/cqngfeh/j513t" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/cqngfeh/m11x" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/cqngfeh/m12p" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/cqngfeh/i8f" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/cqngfeh/d4b" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/cqngfeh/a12a" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/cqngfeh/b3d" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/cqngfeh/x10x" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/cqngfeh/b9q" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/cqngfeh/c7o" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/cqngfeh/w5d" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244402.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2019/02/56f88ebe10e5a89434e6249b7faebf02-320x200.jpg"><p align="center">美国拟放大招 打击使用五中企产品的公司</p></a>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244402.md#1" title="美国拟放大招 打击使用五中企产品的公司""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/02/56f88ebe10e5a89434e6249b7faebf02-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241166.md#1" title="【内幕】文件泄中共防疫 严控国民回国""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/GettyImages-1198181431-600x400-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242490.md#1" title="【一线采访】北京大兴再现确诊病例 官方隐瞒""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/Screen-Shot-2020-07-09-at-7.55.41-am-320x200.png">&nbsp;</a>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242506.md#1" title="谢燕益谈中共惧怕709律师的真实原因""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/XIEYANYI-600x400-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://oqudue369.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>28分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244325.md#1">【珍言真语】白兵：拒当中共奴隶 不自我审查</a><br>
-:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244511.md#1">兄弟姊妹买起来！ 振兴三倍券上路 你要怎么用？</a><br>
-:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244422.md#1">打击暴力犯罪 川普政府启动“传奇行动”</a><br>
-:clock8: <em>46分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244463.md#1">美首申失业金人数131.4万 连14周下降</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244283.md#1">互联网四巨头CEO 本月底再受美国会质询</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243750.md#1">【视频】武夷山暴雨洪灾 景区关闭 全市停水</a><br>
+:clock8: <em>16分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244637.md#1">【有冇搞错】“港版防火墙”迟早出现</a><br>
+:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244538.md#1">蓬佩奥：美国继续寻求与朝鲜核谈</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244325.md#1">【珍言真语】白兵：拒当中共奴隶 不自我审查</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244511.md#1">兄弟姊妹买起来！ 振兴三倍券上路 你要怎么用？</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244422.md#1">打击暴力犯罪 川普政府启动“传奇行动”</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244463.md#1">美首申失业金人数131.4万 连14周下降</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239553.md#1">贵州大巴21死 传司机是退伍军人、拆迁户</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240842.md#1">上海暴雨“中国第一高楼”多层楼漏水严重</a><br>
@@ -29,7 +29,6 @@
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240429.md#1">【翻墙必看】中共在美国“猎狐”真相曝光</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12237466.md#1">美肯塔基海关查获46磅来自中国的迷奸药</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242067.md#1">澳留学生亮相反共后 遭死亡威胁</a><br>
-<a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240462.md#1">四省洪水告急 江西已有近40万人受灾</a><br>
 <br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241760.md#1">中芯国际股价暴涨暴跌 中共撒钱难掩窘境</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241863.md#1">【一线采访】贵州铜仁山体滑坡 村庄被埋</a><br>
@@ -42,7 +41,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 359,583,593 人
+!共 359,584,794 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
@@ -57,7 +56,7 @@
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243001.md#1">【拍案惊奇】习政敌谋划溃坝？中共猎狐打异己</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243374.md#1">《被消失的香港》 港漫画家：用铅笔参与抗争</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12242979.md#1">【翻墙必看】美制裁中共有两个核弹级选项</a><br>
-<a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243659.md#1">习当局再清洗政法系统 分析：大动作在后面</a><br>
+<a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243659.md#1">内斗清洗不断 中共政法委再次“清理门户”</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243809.md#1">709律师呼吁大陆民众 克服恐惧 表达诉求</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241991.md#1">起诉江泽民 法轮功学员占庆荣被枉刑3年</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242228.md#1">邓紫棋拿麦克风飙高音 罩中的玻璃杯瞬间炸裂</a><br>
